fix: BLOG-52 footer links sections column layout changed to 2 columns fot mobile; alignment changed to flex start for elements in link sections;

--- a/static/scss/blocks/_f-menu.scss
+++ b/static/scss/blocks/_f-menu.scss
@@ -5,7 +5,7 @@
 
   &__item {
     height: 24px;
-    text-align: center;
+    text-align: left;
   }
 }
 
