--- a/static/scss/blocks/_footer.scss
+++ b/static/scss/blocks/_footer.scss
@@ -9,8 +9,8 @@
   background-size: cover;
   background-position-y: bottom;
   .container {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 60px;
+    padding-right: 60px;
     max-width: 1400px;
     width: 1400px;
   }
